objects/CMN_ObjectShareInstruction__e.object
<CustomObject>
    <description>This platform event will be fired when an Object Share Configuration record(s) is created, updated or deleted.</description>
    <fields>
        <fullName>CMN_AccessLevel__c</fullName>
        <description>Specify the Access Level to be granted: Read, Edit, All</description>
        <label>Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectAPIName__c</fullName>
        <description>API Name of the object to be shared</description>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectShareConfigurationId__c</fullName>
        <description>Specify the id of the Object Share Configuration record</description>
        <label>Object Share Configuration Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Operation__c</fullName>
        <description>Specify the Operation to be performed on the Apex Share, i.e. Insert, Update, Delete</description>
        <label>Operation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareFrom__c</fullName>
        <description>Specify the user id whose records need to be shared</description>
        <label>Share From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareWith__c</fullName>
        <description>Specify the user id who should be granted access to the records</description>
        <label>Share With</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Object Share Instruction</label>
    <pluralLabel>Object Share Instructions</pluralLabel>
</CustomObject>